tests/snapshots/shell__unclosed_paren.snap
---
source: tests/shell.rs
expression: stdout
---
Error: unexpected token: eof, expected rparen to close expression
   ╭─[unclosed_paren.tmp:1:12]
   │
 1 │ echo .(1 + 1
   │       ┬    ┬  
   │       ╰─────── lparen found here
   │            │  
   │            ╰── error happened here
───╯

